// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering a Second Workout 1`] = `
<div
  className="container"
>
  <h1>
    Edit a workout
  </h1>
  <div
    className="container-md"
  >
    <div
      className="justify-content-md-center row"
    >
      <div
        className="col-md-8"
      >
        <div
          className="card"
        >
          <div
            className="card-header"
          >
            <h4>
              Exercise Information
            </h4>
          </div>
          <div
            className="card-body"
          >
            <form
              className=""
              id="addWorkout"
              onSubmit={[Function]}
            >
              <div
                className="mb-3 form-floating"
              >
                <input
                  aria-label="workoutDate"
                  className="form-control"
                  id="floatingWorkoutDate"
                  onChange={[Function]}
                  type="date"
                  value={"2022-02-08T00:00:00.000Z"}
                />
                <label
                  htmlFor="floatingWorkoutDate"
                >
                  Workout Date
                </label>
              </div>
              <div
                className="mb-3 form-floating"
              >
                <textarea
                  aria-label="workoutNotes"
                  className="form-control"
                  id="floatingNotes"
                  onChange={[Function]}
                  rows={3}
                  value="February"
                />
                <label
                  htmlFor="floatingNotes"
                >
                  Notes
                </label>
              </div>
            </form>
          </div>
        </div>
        <div
          className="card"
        >
          <div
            className="card-header"
          >
            <h4>
              Add/Edit Exercises
            </h4>
          </div>
          <div
            className="card-body"
          >
            <div
              className="container-md"
            >
              <div
                className="row"
              >
                <form
                  className=""
                  id="addExerciseForm"
                  onSubmit={[Function]}
                >
                  <div
                    className="mb-3 form-floating"
                  >
                    <input
                      aria-label="name"
                      className="form-control"
                      id="floatingExerciseName"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                    <label
                      htmlFor="floatingExerciseName"
                    >
                      Name
                    </label>
                  </div>
                  <div
                    className="mb-3 form-floating"
                  >
                    <input
                      aria-label="muscleGroup"
                      className="form-control"
                      id="floatingMuscleGroup"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                    <label
                      htmlFor="floatingMuscleGroup"
                    >
                      Muscle Group
                    </label>
                  </div>
                  <div
                    className="mb-3 form-floating"
                  >
                    <textarea
                      aria-label="exerciseNotes"
                      className="form-control"
                      id="floatingExerciseNotes"
                      onChange={[Function]}
                      rows={3}
                      value=""
                    />
                    <label
                      htmlFor="floatingExerciseNotes"
                    >
                      Notes
                    </label>
                  </div>
                </form>
              </div>
              <div
                className="row"
              >
                <div
                  className="container-md"
                >
                  <form
                    className=""
                    onSubmit={[Function]}
                  >
                    <div
                      className="justify-content-md-center align-items-md-center row row-cols-md-4"
                    >
                      <div
                        className="col-md"
                      >
                        <div
                          className="mb-3 form-floating"
                        >
                          <input
                            aria-label="reps"
                            className="form-control"
                            id="floatingReps"
                            onChange={[Function]}
                            type="text"
                            value=""
                          />
                          <label
                            htmlFor="floatingReps"
                          >
                            Reps
                          </label>
                        </div>
                      </div>
                      <div
                        className="col-md"
                      >
                        <div
                          className="mb-3 form-floating"
                        >
                          <input
                            aria-label="weight"
                            className="form-control"
                            id="floatingWeight"
                            onChange={[Function]}
                            type="text"
                            value=""
                          />
                          <label
                            htmlFor="floatingWeight"
                          >
                            Weight
                          </label>
                        </div>
                      </div>
                    </div>
                    <button
                      aria-label="setSubmit"
                      className="float-end btn btn-outline-secondary"
                      disabled={false}
                      type="submit"
                    >
                      Add Set
                    </button>
                  </form>
                </div>
              </div>
              <div
                className="row"
              >
                <button
                  aria-label="exerciseSubmit"
                  className="mt-4 btn btn-outline-secondary"
                  disabled={false}
                  form="addExerciseForm"
                  type="submit"
                >
                  Add Exercise
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="accordion"
        >
          <div
            className="accordion-item"
          >
            <h2
              className="accordion-header"
            >
              <button
                aria-expanded={false}
                className="accordion-button collapsed"
                onClick={[Function]}
                type="button"
              >
                Exercise List
              </button>
            </h2>
            <div
              aria-expanded={null}
              className="accordion-collapse collapse"
            >
              <div
                className="accordion-body"
              >
                <div
                  className="container"
                >
                  <div
                    className="list-group list-group-flush"
                    onKeyDown={[Function]}
                    style={
                      Object {
                        "margin": "auto",
                        "width": "60%",
                      }
                    }
                  >
                    <button
                      className="list-group-item list-group-item-action"
                      data-rr-ui-event-key={null}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "0px",
                        }
                      }
                    >
                      <div
                        className="card"
                        onClick={[Function]}
                      >
                        <div
                          className="card-body"
                        >
                          <div
                            className="card-title h5"
                          >
                            #
                            1
                             - 
                            Incline Press
                          </div>
                          <div
                            className="card-body"
                          >
                            <div
                              className="pt-3 container"
                              style={
                                Object {
                                  "margin": "auto",
                                  "textAlign": "center",
                                  "width": "60%",
                                }
                              }
                            >
                              <div
                                style={
                                  Object {
                                    "textAlign": "left",
                                  }
                                }
                              >
                                Set List
                              </div>
                              <table
                                className="table table-sm table-striped table-bordered table-hover"
                              >
                                <thead>
                                  <tr>
                                    <th>
                                      Reps
                                    </th>
                                    <th>
                                      Weight
                                    </th>
                                  </tr>
                                </thead>
                                <tbody>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      10
                                    </td>
                                    <td>
                                      275
                                    </td>
                                  </tr>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      10
                                    </td>
                                    <td>
                                      300
                                    </td>
                                  </tr>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      3
                                    </td>
                                    <td>
                                      315
                                    </td>
                                  </tr>
                                </tbody>
                              </table>
                            </div>
                          </div>
                        </div>
                      </div>
                    </button>
                    <button
                      className="list-group-item list-group-item-action"
                      data-rr-ui-event-key={null}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "0px",
                        }
                      }
                    >
                      <div
                        className="card"
                        onClick={[Function]}
                      >
                        <div
                          className="card-body"
                        >
                          <div
                            className="card-title h5"
                          >
                            #
                            2
                             - 
                            Lunges
                          </div>
                          <div
                            className="card-body"
                          >
                            <div
                              className="pt-3 container"
                              style={
                                Object {
                                  "margin": "auto",
                                  "textAlign": "center",
                                  "width": "60%",
                                }
                              }
                            >
                              <div
                                style={
                                  Object {
                                    "textAlign": "left",
                                  }
                                }
                              >
                                Set List
                              </div>
                              <table
                                className="table table-sm table-striped table-bordered table-hover"
                              >
                                <thead>
                                  <tr>
                                    <th>
                                      Reps
                                    </th>
                                    <th>
                                      Weight
                                    </th>
                                  </tr>
                                </thead>
                                <tbody>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      40
                                    </td>
                                    <td>
                                      100
                                    </td>
                                  </tr>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      40
                                    </td>
                                    <td>
                                      100
                                    </td>
                                  </tr>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      40
                                    </td>
                                    <td>
                                      100
                                    </td>
                                  </tr>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      40
                                    </td>
                                    <td>
                                      100
                                    </td>
                                  </tr>
                                </tbody>
                              </table>
                            </div>
                          </div>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="workoutSubmit"
          className="btn btn-outline-secondary"
          disabled={false}
          form="addWorkout"
          type="submit"
        >
          Submit Workout
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Rendering a Workout 1`] = `
<div
  className="container"
>
  <h1>
    Edit a workout
  </h1>
  <div
    className="container-md"
  >
    <div
      className="justify-content-md-center row"
    >
      <div
        className="col-md-8"
      >
        <div
          className="card"
        >
          <div
            className="card-header"
          >
            <h4>
              Exercise Information
            </h4>
          </div>
          <div
            className="card-body"
          >
            <form
              className=""
              id="addWorkout"
              onSubmit={[Function]}
            >
              <div
                className="mb-3 form-floating"
              >
                <input
                  aria-label="workoutDate"
                  className="form-control"
                  id="floatingWorkoutDate"
                  onChange={[Function]}
                  type="date"
                  value={"2023-03-08T00:00:00.000Z"}
                />
                <label
                  htmlFor="floatingWorkoutDate"
                >
                  Workout Date
                </label>
              </div>
              <div
                className="mb-3 form-floating"
              >
                <textarea
                  aria-label="workoutNotes"
                  className="form-control"
                  id="floatingNotes"
                  onChange={[Function]}
                  rows={3}
                  value="Testing Notes for Testing"
                />
                <label
                  htmlFor="floatingNotes"
                >
                  Notes
                </label>
              </div>
            </form>
          </div>
        </div>
        <div
          className="card"
        >
          <div
            className="card-header"
          >
            <h4>
              Add/Edit Exercises
            </h4>
          </div>
          <div
            className="card-body"
          >
            <div
              className="container-md"
            >
              <div
                className="row"
              >
                <form
                  className=""
                  id="addExerciseForm"
                  onSubmit={[Function]}
                >
                  <div
                    className="mb-3 form-floating"
                  >
                    <input
                      aria-label="name"
                      className="form-control"
                      id="floatingExerciseName"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                    <label
                      htmlFor="floatingExerciseName"
                    >
                      Name
                    </label>
                  </div>
                  <div
                    className="mb-3 form-floating"
                  >
                    <input
                      aria-label="muscleGroup"
                      className="form-control"
                      id="floatingMuscleGroup"
                      onChange={[Function]}
                      type="text"
                      value=""
                    />
                    <label
                      htmlFor="floatingMuscleGroup"
                    >
                      Muscle Group
                    </label>
                  </div>
                  <div
                    className="mb-3 form-floating"
                  >
                    <textarea
                      aria-label="exerciseNotes"
                      className="form-control"
                      id="floatingExerciseNotes"
                      onChange={[Function]}
                      rows={3}
                      value=""
                    />
                    <label
                      htmlFor="floatingExerciseNotes"
                    >
                      Notes
                    </label>
                  </div>
                </form>
              </div>
              <div
                className="row"
              >
                <div
                  className="container-md"
                >
                  <form
                    className=""
                    onSubmit={[Function]}
                  >
                    <div
                      className="justify-content-md-center align-items-md-center row row-cols-md-4"
                    >
                      <div
                        className="col-md"
                      >
                        <div
                          className="mb-3 form-floating"
                        >
                          <input
                            aria-label="reps"
                            className="form-control"
                            id="floatingReps"
                            onChange={[Function]}
                            type="text"
                            value=""
                          />
                          <label
                            htmlFor="floatingReps"
                          >
                            Reps
                          </label>
                        </div>
                      </div>
                      <div
                        className="col-md"
                      >
                        <div
                          className="mb-3 form-floating"
                        >
                          <input
                            aria-label="weight"
                            className="form-control"
                            id="floatingWeight"
                            onChange={[Function]}
                            type="text"
                            value=""
                          />
                          <label
                            htmlFor="floatingWeight"
                          >
                            Weight
                          </label>
                        </div>
                      </div>
                    </div>
                    <button
                      aria-label="setSubmit"
                      className="float-end btn btn-outline-secondary"
                      disabled={false}
                      type="submit"
                    >
                      Add Set
                    </button>
                  </form>
                </div>
              </div>
              <div
                className="row"
              >
                <button
                  aria-label="exerciseSubmit"
                  className="mt-4 btn btn-outline-secondary"
                  disabled={false}
                  form="addExerciseForm"
                  type="submit"
                >
                  Add Exercise
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="accordion"
        >
          <div
            className="accordion-item"
          >
            <h2
              className="accordion-header"
            >
              <button
                aria-expanded={false}
                className="accordion-button collapsed"
                onClick={[Function]}
                type="button"
              >
                Exercise List
              </button>
            </h2>
            <div
              aria-expanded={null}
              className="accordion-collapse collapse"
            >
              <div
                className="accordion-body"
              >
                <div
                  className="container"
                >
                  <div
                    className="list-group list-group-flush"
                    onKeyDown={[Function]}
                    style={
                      Object {
                        "margin": "auto",
                        "width": "60%",
                      }
                    }
                  >
                    <button
                      className="list-group-item list-group-item-action"
                      data-rr-ui-event-key={null}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "0px",
                        }
                      }
                    >
                      <div
                        className="card"
                        onClick={[Function]}
                      >
                        <div
                          className="card-body"
                        >
                          <div
                            className="card-title h5"
                          >
                            #
                            1
                             - 
                            Bench Press
                          </div>
                          <div
                            className="card-body"
                          >
                            <div
                              className="pt-3 container"
                              style={
                                Object {
                                  "margin": "auto",
                                  "textAlign": "center",
                                  "width": "60%",
                                }
                              }
                            >
                              <div
                                style={
                                  Object {
                                    "textAlign": "left",
                                  }
                                }
                              >
                                Set List
                              </div>
                              <table
                                className="table table-sm table-striped table-bordered table-hover"
                              >
                                <thead>
                                  <tr>
                                    <th>
                                      Reps
                                    </th>
                                    <th>
                                      Weight
                                    </th>
                                  </tr>
                                </thead>
                                <tbody>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      20
                                    </td>
                                    <td>
                                      275
                                    </td>
                                  </tr>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      20
                                    </td>
                                    <td>
                                      300
                                    </td>
                                  </tr>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      3
                                    </td>
                                    <td>
                                      315
                                    </td>
                                  </tr>
                                </tbody>
                              </table>
                            </div>
                          </div>
                        </div>
                      </div>
                    </button>
                    <button
                      className="list-group-item list-group-item-action"
                      data-rr-ui-event-key={null}
                      onClick={[Function]}
                      style={
                        Object {
                          "border": "0px",
                        }
                      }
                    >
                      <div
                        className="card"
                        onClick={[Function]}
                      >
                        <div
                          className="card-body"
                        >
                          <div
                            className="card-title h5"
                          >
                            #
                            2
                             - 
                            Shrugs
                          </div>
                          <div
                            className="card-body"
                          >
                            <div
                              className="pt-3 container"
                              style={
                                Object {
                                  "margin": "auto",
                                  "textAlign": "center",
                                  "width": "60%",
                                }
                              }
                            >
                              <div
                                style={
                                  Object {
                                    "textAlign": "left",
                                  }
                                }
                              >
                                Set List
                              </div>
                              <table
                                className="table table-sm table-striped table-bordered table-hover"
                              >
                                <thead>
                                  <tr>
                                    <th>
                                      Reps
                                    </th>
                                    <th>
                                      Weight
                                    </th>
                                  </tr>
                                </thead>
                                <tbody>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      40
                                    </td>
                                    <td>
                                      100
                                    </td>
                                  </tr>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      40
                                    </td>
                                    <td>
                                      100
                                    </td>
                                  </tr>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      40
                                    </td>
                                    <td>
                                      100
                                    </td>
                                  </tr>
                                  <tr
                                    onClick={[Function]}
                                  >
                                    <td>
                                      40
                                    </td>
                                    <td>
                                      100
                                    </td>
                                  </tr>
                                </tbody>
                              </table>
                            </div>
                          </div>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="workoutSubmit"
          className="btn btn-outline-secondary"
          disabled={false}
          form="addWorkout"
          type="submit"
        >
          Submit Workout
        </button>
      </div>
    </div>
  </div>
</div>
`;
